# parseProtobufFile

./: CMakeLists.txt  README.md  build.sh  parse_template_file.cc  template_feature.pb.cc  template_feature.pb.h  template_feature.proto
include/: st_imagehelper.hpp
include/codec/: stb_image_resize.h
include/google/protobuf/stubs/: common.h
template/: template_file.data
